# ThePartySpot

./: .gitignore  .gitpod.yml  .npmrc  README.md  package.json  pnpm-lock.yaml
.github/: copilot-instructions.md
ThePartySpot-planning-scaffold/: ThePartySpot.code-workspace  analytics-and-kpis.md  booking-flow-spec.md  branding-style-guide.md  contacts.md  content-tone-voice.md  feature-priority-matrix.md  glossary.md  information-architecture.md  legal-templates.md  meeting-notes-template.md  payments-spec.md  project-overview.md  realtime-and-push-design.md  request-tiles-spec.md  rollout-plan.md  security-privacy.md  site-map.md  technical-architecture.md  user-journeys.md  user-personas.md  vision-and-goals.md
ThePartySpot-planning-scaffold/old-party-spot/: old-branding-assets-notes.md  old-business-overview.md  old-capacity-and-layout.md  old-contact-info.md  old-current-pain-points.md  old-existing-website-copy.md  old-faq-existing.md  old-operating-hours.md  old-packages-and-pricing.md  old-social-links.md
ThePartySpot_remote/: README.md
apps/admin-desktop/: README.md  index.html  jsconfig.json  package.json  vite.config.js
apps/admin-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/admin-desktop/src-tauri/icons/: README.md
apps/admin-desktop/src-tauri/src/: main.rs
apps/api/: package.json  tsconfig.json
apps/web/: README.md  astro.config.mjs  package.json  tailwind.config.cjs  vercel.json
docs/: creative-brief.md  system-overview.md
docs/planning/: README.md  admin-panel-spec.md  auth-strategy.md  branding-style-guide.md  contacts.md  (+11 more)
(+13 files in other folders)
