[package]
name = "admin-desktop"
version = "0.1.0"
edition = "2021"
description = "The Party Spot admin control center"
authors = ["The Party Spot"]
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.6", features = [ "api-all"] }
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
